2010-04-21  James Youngman  <jay@gnu.org>

	Move rl-merge.cc into libcssc.a
	* Makefile.am (libcssc_a_SOURCES): Move rl-merge.cc into the library.
	(get_SOURCES): Remove rl-merge.cc.
	(admin_SOURCES): Likewise.
	* rel_list.h: Remove some unnecessary blank lines.

2010-04-20  James Youngman  <jay@gnu.org>

	* unit-tests/Makefile.am (TESTS): don't duplicate the contents of
	$(check_PROGRAMS), just use that variable.
	(LDADD): Add ../libcssc.a.
	(test_mylist_SOURCES): Don't list object files in libcssc.a.
	(test_myset_SOURCES): Don't list object files in libcssc.a.

	New unit test for myset<T>.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_myset.
	(LDADD): Just use one LDADD variable for all unit tests.
	* unit-tests/test_myset.cc: New unit test.

	Add a unit test.
	* unit-tests/test_mylist.cc: New file; unit test for mylist<T>.
	* unit-tests/Makefile.am: New file.
	* configure.ac: Call AC_LIBTOOL.  Include
	googletest/m4/acx_pthread.m4.  Add --with-pthreads so that our
	main build and googletest libraries are compatible.  Add
	unit-tests/Makefile to AC_CONFIG_FILES.
	* autogen.sh: Run libtoolize in the top level and the googletest
	directories.
	* Makefile.am (SUBDIRS): Add unit-tests.

	Include <errno.h> unconditionally where we need it.
	* admin.cc: Include <errno.h> instead of "err_no.h".
	* pfile.cc: Likewise.
	* cssc.h: Likewise.
	* file.cc: Likewise.
	* get.cc: Likewise.
	* run.cc: Likewise.
	* quit.cc: Likewise.
	* sccsfile.cc: Likewise.
	* sf-delta.cc: Likewise.
	* what.cc: Likewise.
	* err_no.h: Remove useless file.
	* Makefile.am (noinst_HEADERS): Remove err_no.h.

	Instead of linking all objects explicitly, use a library.
	* Makefile.am (noinst_LIBRARIES): Build new library libcssc.a.
	(libcssc_a_SOURCES): list the source files for the library.
	(common_sources): Remove unused variable.
	(sname_srcs): Likewise.
	(sfile_srcs): Likewise.
	(mod_srcs): Likewise.
	(moddelta_srcs): Likewise.
	(newdelta_srcs): Likewise.